--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,12 @@
 	border: none;
 }
 
+header
+{
+	border-bottom: 1px solid black;
+	padding: 0px 5px;
+}
+
 #wrapper {
 	width: 100%;
 	height: 100%;
@@ -18,8 +24,9 @@
   top: 40px;
 	left: 0px;
   bottom: 0px;
-	width: 220px;
+	width: 210px;
 
+  padding: 0px 5px;
 	overflow-x: hidden;
   overflow-y: scroll;
 }
@@ -112,6 +119,7 @@
 #logout {
 	float:right;
 	margin-right: 5px;
+	margin-top: -10px;
 	border: 1px solid #000000;
 	padding: 2px 5px;
 	background: #E0DFE3;
