small layout changes

--- a/style/styles.less
+++ b/style/styles.less
@@ -18,7 +18,7 @@ header {
 
 #selector {
 	position: absolute;
-	top: 40px;
+	top: 60px;
 	left: 0px;
 	bottom: 0px;
 	width: 210px;
@@ -62,7 +62,7 @@ header {
 
 #content {
 	min-height: 520px;
-	
+	height: 750px;
 	padding: 10px;
 	margin-left:220px;
 
