--- a/style/styles.less
+++ b/style/styles.less
@@ -8,7 +8,11 @@
 
 header {
 	border-bottom: 1px solid #000;
-	padding: 0px 5px;
+	background-color: black;
+    color: #EEEEEE;
+    font-size: 0.8em;
+    padding: 5px;
+    height: 49px;
 }
 
 #wrapper {
@@ -24,23 +28,20 @@ header {
 	width: 210px;
 	overflow-x: hidden;
 	overflow-y: scroll;
-	padding: 0px 5px;
+	padding: 0;
 
-	div {
-		position: relative;
-		width: 200px;
-	}
 
 	ul {
-		width: 200px;
 		list-style-type: none;
-		padding: 2px 5px;
-		border-right: 1px solid black;
+		border-top: 1px dotted #ddd; 
 
 		li {
-			width: 100%;
+		    font-size: 0.8em;
+    		border-bottom: 1px dotted #ddd; 
+			display: block;
+			padding: 2px 10px;
 			&:hover {
-				background: #ccc;
+				background: #eee;
 				cursor: pointer;
 			}
 		}
@@ -71,8 +72,10 @@ header {
 		width: 100%;
 
 		th {
-			background: #D3DCE3;
+			background: black;
+			color: #eee;
 			border: 1px solid #fff;
+			padding: 2px;
 		}
 
 		thead td {
@@ -87,7 +90,7 @@ header {
 		}
 
 		tbody tr:hover td {
-			background: #bbb;
+			background: #ccc;
 			cursor: pointer;
 		}
 	}
@@ -123,4 +126,12 @@ header {
 	text-decoration: none;
 	position: relative;
 	bottom: 10px;
+}
+
+h3 a {
+    display: block;
+    background-color: #ddd;
+    padding: 3px;
+    border-top: 1px dotted #aaa;
+    color: #ff4422;
 }
