--- a/style/styles.less
+++ b/style/styles.less
@@ -13,7 +13,11 @@ body
 
 header {
 	border-bottom: 1px solid #000;
-	padding: 0px 5px;
+	background-color: black;
+  color: #EEEEEE;
+  font-size: 0.8em;
+  padding: 5px;
+  height: 49px;
 }
 
 #wrapper {
@@ -40,12 +44,12 @@ header {
 		width: 200px;
 		list-style-type: none;
 		padding: 2px 5px;
-		border-right: 1px solid black;
+		border-top: 1px dotted #ddd;
 		
 		li {
 			width: 100%;
 			&:hover {
-				background: #ccc;
+				background: #eee;
 				cursor: pointer;
 			}
 		}
@@ -85,8 +89,10 @@ header {
 		width: 100%;
 		
 		th {
-			background: #D3DCE3;
-			border: 1px solid #fff;
+			background: black;
+      color: #eee;
+      border: 1px solid #fff;
+      padding: 2px;
 		}
 		
 		thead td {
@@ -101,7 +107,7 @@ header {
 		}
 		
 		tbody tr:hover td {
-			background: #bbb;
+			background: #ccc;
 			cursor: pointer;
 		}
 	}
@@ -141,4 +147,12 @@ header {
 	text-decoration: none;
 	position: relative;
 	bottom: 10px;
+}
+
+h3 a {
+  display: block;
+  background-color: #ddd;
+  padding: 3px;
+  border-top: 1px dotted #aaa;
+  color: #ff4422;
 }
