small changes in less file

--- a/style/styles.less
+++ b/style/styles.less
@@ -113,6 +113,14 @@ header {
 		  border: 1px solid #fff;
 		}
 		
+		tbody tr:nth-child(odd) {
+			background: #ddd;
+		}
+		
+		tbody tr:nth-child(even) {
+			background: #eee;
+		}
+		
 		tbody tr:hover td {
 			background: #ccc;
 			cursor: pointer;
@@ -129,18 +137,6 @@ header {
 	overflow-y: scroll;
 }
 
-.tableRow0 {
-	td {
-		background: #eee;
-	}
-}
-
-.tableRow1 {
-	td  {
-		background: #ddd;
-	}
-}
-	
 .clearDiv {
 	clear: both;
 }
