table datas are now truncated according to options.truncateData

--- a/style/styles.less
+++ b/style/styles.less
@@ -158,3 +158,11 @@ h3 a {
 	border-top: 1px dotted #aaa;
 	color: #ff4422;
 }
+.hidden {
+	display: none;
+}
+.showMore {
+	cursor: pointer;
+	float: right;
+	font-weight: bold;
+}
