changed look of main content table a bit

--- a/style/styles.less
+++ b/style/styles.less
@@ -96,21 +96,15 @@ header {
 		width: 100%;
 		
 		th {
-			background: #000000;
 			color: #eee;
-			padding: 2px;
-			border: 1px solid #fff;
+			background: black;
+            font-weight: bold;
+            text-align: left;
 		}
 		
-		thead td {
-		  padding: 2px 5px;
-		  font-weight: bold;
-		  border: 1px solid #fff;
-		}
-		
-		tbody td {
-		  padding: 2px 5px;
-		  border: 1px solid #fff;
+		td, th {
+		  padding: 3px;
+		  border: 1px dotted #bbb;
 		}
 		
 		tbody tr:nth-child(odd) {
