--- a/style/styles.less
+++ b/style/styles.less
@@ -94,6 +94,7 @@ header {
 	table {
 		border-collapse: collapse;
 		width: 100%;
+		margin-bottom: 10px;
 		
 		th {
 			color: #eee;
@@ -134,16 +135,18 @@ header {
 .clearDiv {
 	clear: both;
 }
-#logout {
-	float:right;
-	margin-right: 5px;
+.button {
 	border: 1px solid #000000;
 	padding: 2px 5px;
 	background: #E0DFE3;
 	color: #000;
 	text-decoration: none;
-	position: relative;
-	bottom: 10px;
+	&#logout {
+		margin-right: 5px;
+		float:right;
+		position: relative;
+		bottom: 10px;
+	}
 }
 h3 a {
 	display: block;
