--- a/style/styles.less
+++ b/style/styles.less
@@ -30,6 +30,49 @@ body
   overflow: hidden;
 }
 
+#login {
+	border: 1px solid black;
+	margin: 20% auto;
+	position:relative;
+	width: 300px;
+	padding:0;
+	height: 160px;
+	.stripedBd (4px);
+	
+	form {
+		padding: 10px 5px;
+		label {
+			float: left;
+			width: 80px;
+			padding: 2px;
+			margin: 2px 0;
+		}
+		input {
+			float:left;
+			padding: 2px 5px;
+			margin: 2px 0;
+			width: 193px;
+			border:1px dotted #000; 
+			&:after {
+				content: ".";
+				display: block;
+				clear: both;
+				visibility: hidden;
+				height: 0;
+			}
+			&[type="submit"] {
+				float:right;
+				width: auto;
+				margin-top: 8px;
+			}
+			&:focus, &:active {
+				border: 1px solid @color1;
+			}
+		}
+	}
+	
+}
+
 header {
 	border-bottom: 1px solid #000;
 	padding: 0px 5px;
