--- a/style/styles.less
+++ b/style/styles.less
@@ -31,46 +31,54 @@ body
 }
 
 #login {
-	border: 1px solid black;
-	margin: 20% auto;
-	position:relative;
-	width: 300px;
-	padding:0;
-	height: 160px;
-	.stripedBd (4px);
-	
-	form {
-		padding: 10px 5px;
-		label {
-			float: left;
-			width: 80px;
-			padding: 2px;
-			margin: 2px 0;
-		}
-		input {
-			float:left;
-			padding: 2px 5px;
-			margin: 2px 0;
-			width: 193px;
-			border:1px dotted #000; 
-			&:after {
-				content: ".";
-				display: block;
-				clear: both;
-				visibility: hidden;
-				height: 0;
+
+	.stripedBd (14px);
+	background-color: #FAFAFA;
+	>div {
+		border: 1px solid black;
+		background: rgba(224, 224, 224, 0.5);
+		margin: 20% auto;
+		position:relative;
+		width: 300px;
+		padding:0;
+		height: 160px;
+		box-shadow: 2px 2px 10px 1px #333333; 
+		
+		form {
+			padding: 10px 5px;
+			label {
+				float: left;
+				width: 80px;
+				padding: 2px;
+				margin: 2px 0;
 			}
-			&[type="submit"] {
-				float:right;
-				width: auto;
-				margin-top: 8px;
-			}
-			&:focus, &:active {
-				border: 1px solid @color1;
+			input {
+				float:left;
+				padding: 2px 5px;
+				margin: 2px 0;
+				width: 193px;
+				border:1px dotted #000; 
+				&:after {
+					content: ".";
+					display: block;
+					clear: both;
+					visibility: hidden;
+					height: 0;
+				}
+				&[type="submit"] {
+					float:right;
+					width: auto;
+					color: @color1;
+					font-weight: bold;
+					background: #ddd;
+					margin-top: 8px;
+				}
+				&:focus, &:active {
+					border: 1px solid @color1;
+				}
 			}
 		}
 	}
-	
 }
 
 header {
@@ -107,6 +115,7 @@ header {
 	overflow-x: hidden;
 	overflow-y: scroll;
 	padding: 0px;
+	background: #FFF;
 	
 	div {
 		position: relative;
