added possibility to relogin after session timeout

--- a/style/styles.less
+++ b/style/styles.less
@@ -330,3 +330,16 @@ nav {
 		border-color:#DDDDDD transparent;
 	}
 }
+
+#overlay {
+	.stripedBd(14px);
+	background-color: #000;
+	opacity: 0.6;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	z-index: 998;
+}
