--- a/style/styles.less
+++ b/style/styles.less
@@ -1,6 +1,6 @@
 // --------LESS Values--------------------------
 
-.stripedBd (@radius) {
+.stripedBg (@radius) {
 	background-color: #DDDDDD;
 	background-image: -moz-linear-gradient(right top , transparent, transparent 15%, rgba(238, 238, 238, 0.5) 15%, rgba(238, 238, 238, 0.5) 50%, transparent 50%, transparent 65%, rgba(238, 238, 238, 0.5) 65%, rgba(238, 238, 238, 0.5));
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#444444), to(#999999)); /* Saf4+, Chrome */
@@ -36,7 +36,7 @@ body
 
 #login {
 
-	.stripedBd (14px);
+	.stripedBg (14px);
 	background-color: #FAFAFA;
 	>div {
 		border: 1px solid black;
@@ -219,6 +219,7 @@ header {
 	bottom: 10px;
 	left: 10px;
 	right: 10px;
+	bottom: 22px;
 	overflow-y: scroll;
 }
 
@@ -226,7 +227,7 @@ header {
 	clear: both;
 }
 .button {
-	.stripedBd(14px);
+	.stripedBg(14px);
 	
 	border: 1px solid #000000;
 	padding: 3px 6px;
@@ -245,7 +246,7 @@ header {
 	}
 }
 h3 {
-	.stripedBd(14px); 
+	.stripedBg(14px); 
 	border-top: 1px dotted #aaa;
 	a {
 		color: #ff4422;
@@ -254,7 +255,7 @@ h3 {
 	}
 }
 nav {
-	.stripedBd(14px); 
+	.stripedBg(14px); 
 	border-top: 1px dotted #aaa;
 	height: 16px;
 	padding-bottom: 6px;
@@ -299,6 +300,95 @@ nav {
 	font-weight: bold;
 }
 
+#quicksearch {
+	position: absolute;
+	right:10px;
+	left:10px;
+	background: #ddd;
+	z-index:10;
+	bottom:0;
+	border-left:1px solid #000;
+	border-right:1px solid #000;
+	h4 {
+		height:22px;
+		background: #000;
+		span {
+			.stripedBg(14px);
+			float: left;
+			padding: 2px 5px 3px 5px;
+			border-top:1px solid #000;
+			color: #000;
+			&.active {
+				cursor:pointer;
+				color: @color1;
+			}
+		}
+	}
+	>div {
+		padding: 3px 10px;
+		display:none;
+		
+	}
+	ul {
+		list-style-type: none;
+		width:700px;
+		li {
+			float: left;
+			padding: 2px 5px;
+			background: #EEEEEE;
+			border: 1px dotted #aaa;
+			curser:pointer;
+			input {
+				float: right;
+				margin-left: 0;
+			}
+			label {
+				display: block;
+				float: left;		
+				width: 220px;
+				padding: 0;
+				border: none;
+				margin-right: 0;
+			}
+			&:last-of-type {
+				&:after {
+					content: ".";
+					display: block;
+					clear: both;
+					visibility: hidden;
+					height: 0;
+				}
+			}	
+		}
+		&:after {
+			content: ".";
+			display: block;
+			clear: both;
+			visibility: hidden;
+			height: 0;
+		}
+	}
+	label {
+		display: block;
+		float: left;		
+		width: 100px;
+		curser:pointer;
+		background: #EEEEEE;
+		curser:pointer;
+		padding:2px 5px;
+		border: 1px dotted #aaa;
+		margin-right:5px;
+		input {
+			float: left;
+			margin-left: 2px;
+		}
+	}
+	input[type="text"] {
+		padding:2px 5px;
+		border: 1px dotted #aaa;
+	}
+}
+
 
 
 .triangle-isosceles {
@@ -308,7 +398,7 @@ nav {
 	padding:15px;
 	margin:0 0 3em;
 	color:#000;
-	.stripedBd(14px);
+	.stripedBg(14px);
 
 	box-shadow: 2px 2px 10px 1px #333333; 
 	
@@ -336,7 +426,7 @@ nav {
 }
 
 #overlay {
-	.stripedBd(14px);
+	.stripedBg(14px);
 	background-color: #000;
 	opacity: 0.6;
 	position: absolute;
