continue building quicksearch panel

--- a/style/styles.less
+++ b/style/styles.less
@@ -221,6 +221,9 @@ header {
 	right: 10px;
 	bottom: 22px;
 	overflow-y: scroll;
+	&.panelOpen {
+		bottom: 112px
+	}
 }
 
 .clearDiv {
@@ -327,7 +330,6 @@ nav {
 	>div {
 		padding: 3px 10px;
 		display:none;
-		
 	}
 	ul {
 		list-style-type: none;
