small changesto dbdesigner optics & test query change in core.php (not live)

--- a/style/styles.less
+++ b/style/styles.less
@@ -453,12 +453,14 @@ nav {
 	border: 1px solid black;
 
 	.table {
-		position: absolute;
+		position: relative;
 		border: 1px solid black;
 		min-width: 100px;
 		padding: 0px 3px;
 		font-size: 0.8em;
 		background: #ffffff;
+		display: inline-block;
+		margin: 10px;
 	}
 	
 	p {
