--- a/style/styles.less
+++ b/style/styles.less
@@ -451,6 +451,7 @@ nav {
 #show_design {
 	margin-bottom: 10px;
 	border: 1px solid black;
+	padding: 0 20px 20px 0;
 
 	.table {
 		position: absolute;
