--- a/style/styles.less
+++ b/style/styles.less
@@ -221,8 +221,8 @@ header {
 	bottom: 10px;
 	left: 10px;
 	right: 10px;
-	/*bottom: 22px;*/
-	bottom: 0px;
+	bottom: 22px;
+	/*bottom: 0px;*/
 	overflow-y: scroll;
 	&.panelOpen {
 		bottom: 112px
@@ -315,7 +315,7 @@ nav {
 	bottom:0;
 	border-left:1px solid #000;
 	border-right:1px solid #000;
-	display: none;
+	/*display: none;*/
 	h4 {
 		height:22px;
 		background: #000;
