start porting to angularjs

--- a/style/styles.less
+++ b/style/styles.less
@@ -144,6 +144,9 @@ header {
 				background: #eee;
 				cursor: pointer;
 			}
+			&.active {
+				font-weight: bold;
+			}
 		}
 	}
 }
@@ -498,4 +501,10 @@ nav {
 			color: @color1;
 		}
 	}
+}
+
+.ui-match {
+	color:#FF4422;
+	font-weight: bold;
+  font-size: 1em;
 }
