added autocomplete for sql field

--- a/views/sql.html
+++ b/views/sql.html
@@ -1,3 +1,4 @@
 <div ng-controller="sql">
 	<div ui-codemirror="editorOptions" ng-model="query" ui-refresh="view"></div>
+	<p>Strg+Leertaste für Autocomplete</p>
 </div>
